--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -21,7 +21,7 @@
     <style>
         .table-container {
             width: 365px;
-            height: 470px;
+            height: 490px;
             border: 4px double black;
         }
         
@@ -115,29 +115,29 @@
                 </tr>
 
                 <tr>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Qty.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Weight (G)</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Ins ch.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Value</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Spl del ch.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Freight</b></td>
-                    <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Total Amount</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
+                    <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
 
                 </tr>
                 <tr>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.pcs }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.charged_weight }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.insurance_amt }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.declared_value }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.spl_del_charge }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.freight_charge }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.pcs }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.charged_weight }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.insurance_amt }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.declared_value }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.spl_del_charge }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.freight_charge }}</td>
                     <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>Rs. {{ bd.amount }}</b></td>
                 </tr>
                 <tr>
                     <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.remarks }}</td>
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 7px; border: 0;"><b>Terms & Conditions*</b></td>
+                    <td colspan="5" style="font-size: 8px; border: 0;"><b>Terms & Conditions*</b></td>
                     <td colspan="3" style="border: 1px solid black; border-bottom: 0px; border-right: 0px; text-align: center;" rowspan="3">
                         <div id="qrcode">
                             {{ qr_code | safe}}
@@ -146,8 +146,9 @@
                     <!-- Need to setup QR Code -->
                 </tr>
                 <tr>
-                    <td colspan="5" rowspan="3" style="font-size: 6px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">Accurate declaration required. No liability for false info or seized goods. Claims within 15 days. Max liability: Rs. 100 per article. No claims for refusal, delays, incomplete addresses. Prompt service but no guaranteed time. No gold,
-                        silver, bearer cheques, shares, or cash. No claims for cash, jewellery, contraband, passports, or undeclared items. Prohibited: share certificates with blank transfer deeds.<br>For more information Visit: <b style="font-size: 11x;">www.airpostxpress.com</b>                        </td>
+                    <td colspan="5" rowspan="3" style="font-size: 7px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">Accurate declaration required. No liability for false info or seized goods. Claims within 15 days. Max liability: Rs. 100 per article. No claims for refusal, delays, incomplete addresses. Prompt service but no guaranteed time. No gold,
+                        silver, bearer cheques, shares, or cash. No claims for cash, jewellery, contraband, passports, or undeclared items. Prohibited: share certificates with blank transfer deeds,. Insurance is mandatory for items valued at or above
+                        Rs. 1000/-.<br>For more information Visit: <b style="font-size: 10px;">www.airpostxpress.com</b> </td>
                 </tr>
                 <tr>
                     <!-- <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 2nd</td> -->
@@ -171,7 +172,7 @@
         </div>
 
         <!-- Second Table -->
-        <div class="table-container" style="margin-left: 40px;">
+        <div class="table-container d-flex" style="margin-left: 55px;">
             <table>
                 <tr>
                     <th style="border: 0px; height: 0px;"></th>
@@ -239,29 +240,29 @@
                 </tr>
 
                 <tr>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Qty.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Weight (G)</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Ins ch.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Value</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Spl del ch.</b></td>
-                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Freight</b></td>
-                    <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 11px; text-align: center;"><b>Total Amount</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Qty.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Weight (G)</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Ins ch.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Value</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Spl del ch.</b></td>
+                    <td style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Freight</b></td>
+                    <td colspan="2" style="border-right: 0px; border-top: 0px; border-bottom: 0; font-size: 10px; text-align: center;"><b>Total Amount</b></td>
 
                 </tr>
                 <tr>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.pcs }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.charged_weight }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.insurance_amt }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.declared_value }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.spl_del_charge }}</td>
-                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;">{{ bd.freight_charge }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.pcs }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.charged_weight }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.insurance_amt }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.declared_value }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.spl_del_charge }}</td>
+                    <td style="border-right: 0px; border-top: 1px solid black; font-size: 10px; text-align: center;">{{ bd.freight_charge }}</td>
                     <td colspan="2" style="border-right: 0px; border-top: 1px solid black; font-size: 11px; text-align: center;"><b>Rs. {{ bd.amount }}</b></td>
                 </tr>
                 <tr>
                     <td colspan="8" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>Item Desc:</b> {{ bd.remarks }}</td>
                 </tr>
                 <tr>
-                    <td colspan="5" style="font-size: 7px; border: 0;"><b>Terms & Conditions*</b></td>
+                    <td colspan="5" style="font-size: 8px; border: 0;"><b>Terms & Conditions*</b></td>
                     <td colspan="3" style="border: 1px solid black; border-bottom: 0px; border-right: 0px; text-align: center;" rowspan="3">
                         <div id="qrcode">
                             {{ qr_code | safe}}
@@ -270,8 +271,9 @@
                     <!-- Need to setup QR Code -->
                 </tr>
                 <tr>
-                    <td colspan="5" rowspan="3" style="font-size: 6px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">Accurate declaration required. No liability for false info or seized goods. Claims within 15 days. Max liability: Rs. 100 per article. No claims for refusal, delays, incomplete addresses. Prompt service but no guaranteed time. No gold,
-                        silver, bearer cheques, shares, or cash. No claims for cash, jewellery, contraband, passports, or undeclared items. Prohibited: share certificates with blank transfer deeds.<br>For more information Visit: <b style="font-size: 11x;">www.airpostxpress.com</b>                        </td>
+                    <td colspan="5" rowspan="3" style="font-size: 7px; border: 0; border-bottom: 1px solid black; padding-top: 0px;">Accurate declaration required. No liability for false info or seized goods. Claims within 15 days. Max liability: Rs. 100 per article. No claims for refusal, delays, incomplete addresses. Prompt service but no guaranteed time. No gold,
+                        silver, bearer cheques, shares, or cash. No claims for cash, jewellery, contraband, passports, or undeclared items. Prohibited: share certificates with blank transfer deeds,. Insurance is mandatory for items valued at or above
+                        Rs. 1000/-.<br>For more information Visit: <b style="font-size: 10px;">www.airpostxpress.com</b> </td>
                 </tr>
                 <tr>
                     <!-- <td colspan="5" style="font-size: 10px; border: 0;">&nbsp; &#8226; Condition 2nd</td> -->
