--- a/api/templates/tracking_history.html
+++ b/api/templates/tracking_history.html
@@ -15,14 +15,11 @@
                         <input type="datetime-local" id="datetime" name="datetime" class="form-control" name="date-field" />
                     </div>
                     <div class="col-md-6">
-                        <label for="from_destination"><b>Destination In</b>
+                        <label for="from_destination"><b>Destination From</b>
                             <span class="red_color">*</span>
                         </label>
-                        <select class="form-select" name="from_destination" id="from_destination" aria-label="Default select example" required>
-                            {% for dest in destinations %}
-                            <!-- <option selected>Open this select menu</option> -->
-                            <option value="{{ dest.id }}">{{ dest.name }}</option>
-                            {% endfor %}
+                        <select class="form-select" name="from_destination" id="from_destination" aria-label="Default select example" required>                                                        
+                            <option value="1">Select Automatically</option>                            
                         </select>
                     </div>
                 </div>
@@ -56,7 +53,7 @@
                     <thead>
                         <tr>
                             <th scope="col">C.N. number</th>
-                            <th scope="col">Destination In</th>
+                            <th scope="col">Destination From</th>
                             <th scope="col">Remarks</th>
                             <th scope="col">Action</th>
                         </tr>
