Correction in ac booking and print mode amount

--- a/api/templates/cash_booking.html
+++ b/api/templates/cash_booking.html
@@ -280,7 +280,7 @@
                                     <option selected value="PREPAID">PREPAID</option>
                                     <option value="COD">COD</option>
                                     <option value="TO-PAY">TO-PAY</option>  
-                                    <option value="A/c">A/c</option>                                                                        
+                                    <option value="A/C">A/C</option>                                                                        
                                 </select>
                             </div>
                             <div class="col-md-2 mt-2">
