--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -106,7 +106,11 @@
 
                 <tr>
                     <td colspan="5" style="font-size: 11px; border: 0px; border-bottom: 1px solid black;"><b>{{ ud.state }}</b>, Mob: {{bd.sender_mobile }}</td>
+                    {% if bd.mode_amount %}
                     <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b>{{ bd.mode_amount }}</b></td>
+                    {% else %}
+                    <td colspan="3" style="border-right: 0px; border-top: 0px; font-size: 11px; text-align: center;"><b></b></td>
+                    {% endif %}
                 </tr>
                 <tr>
                     <td colspan="8" style="font-size: 10px; border-bottom: 1px solid black;">Ref No: {{ bd.ref_courier_number }}</td>
