--- a/api/templates/drs_ajax.html
+++ b/api/templates/drs_ajax.html
@@ -34,7 +34,7 @@
                 });
             }
         });
-
+        // Get automatically number as required.
         $('#docket_number').blur(function(event) {
             event.preventDefault();
             var docket_num = $(this).val();
