--- a/api/templates/tracking_out_ajax.html
+++ b/api/templates/tracking_out_ajax.html
@@ -115,7 +115,7 @@
                         let new_data = data.data;
                         console.log(new_data);
                         for (i = 0; i < new_data.length; i++) {
-                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                         }
                         $("#tbody").html(output);
                         $("h4[tabindex=0]").focus();
@@ -150,7 +150,7 @@
                     if (data.status == 1) {
                         let new_data = data.data;
                         for (i = 0; i < new_data.length; i++) {
-                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                         }
                         $("#tbody").html(output);
                         $("h4[tabindex=0]").focus();
@@ -186,7 +186,7 @@
                         let new_data = data.data;
                         if (new_data.length) {
                             for (i = 0; i < new_data.length; i++) {
-                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                             }
                             $("#tbody").html(output);
                             $("h4[tabindex=0]").focus();
@@ -201,5 +201,72 @@
         } else {
             alert("Select correct dates.");
         }
-    })
+    });
+
+    // For search by date and area name
+    $("#from_destination").blur(function(e) {
+        var date = $("#datetime").val();
+        var destination = $("#from_destination").val();
+        let token = $("input[name='csrfmiddlewaretoken']").val();
+        let my_data = {
+            date: date,
+            destination: destination,
+            csrfmiddlewaretoken: token
+        };
+        let output = "";
+        $.ajax({
+            url: "{% url 'load_out_auto_search_by_date_and_des' %}",
+            method: "POST",
+            dataType: "json",
+            data: my_data,
+            success: function(data) {
+                if (data.status) {
+                    let new_data = data.data;
+                    if (new_data.length) {
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                        }
+                        $("#tbody").html(output);
+                    } else {
+                        $("#tbody").html(output);
+                    }
+                } else {
+                    $("#tbody").html(output);
+                }
+            }
+        });
+    });
+
+
+    // Search by date with auto search    
+    $("#datetime").blur(function(e) {
+        var date = $("#datetime").val();
+        let token = $("input[name='csrfmiddlewaretoken']").val();
+        let my_data = {
+            date: date,
+            csrfmiddlewaretoken: token
+        };
+        let output = "";
+        $.ajax({
+            url: "{% url 'load_out_auto_search_by_date_auto' %}",
+            method: "POST",
+            dataType: "json",
+            data: my_data,
+            success: function(data) {
+                if (data.status) {
+                    let new_data = data.data;
+                    if (new_data.length) {
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                        }
+                        $("#tbody").html(output);
+                    } else {
+                        $("#tbody").html(output);
+                    }
+                } else {
+                    $("#tbody").html(output);
+                }
+            }
+        });
+    });
 </script>
