--- a/api/templates/drs_generate.html
+++ b/api/templates/drs_generate.html
@@ -15,13 +15,13 @@
                                 <label for="datetime"><b>DRS Date</b>
                                     <span class="red_color">*</span>
                                 </label>
-                                <input type="date" id="datetime" name="datetime" class="form-control" name="date-field" />
+                                <input type="date" id="datetime" name="datetime" class="form-control for_bl" name="date-field" />
                             </div>
                             <div class="col-md-4">
                                 <label for="area_name"><b>Area Name</b>
                                     <span class="red_color">*</span>
                                 </label>
-                                <select class="form-select control-label" name="area_name" id="area_name" aria-label="Area Name" required>            
+                                <select class="form-select control-label for_bl" name="area_name" id="area_name" aria-label="Area Name" required>            
                                     {% for area in area_names %}
                                     <option value="{{ area.id }}">{{ area.area_name }}</option>            
                                     {% endfor %}
@@ -31,7 +31,7 @@
                                 <label for="delivery_boy"><b>Delivery boy</b>
                                     <span class="red_color">*</span>
                                 </label>
-                                <select class="form-select control-label" name="delivery_boy" id="delivery_boy" aria-label="Area Name" required>            
+                                <select class="form-select control-label for_bl" name="delivery_boy" id="delivery_boy" aria-label="Area Name" required>            
                                     {% for boy in delivery_boy %}
                                     <option value="{{ boy.id }}">{{ boy.delivery_boy_name }}</option>
                                     {% endfor %}
